--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-numpy>=1.24.0
+# Core dependencies
+numpy==1.24.3
+pygame==2.4.0
+
+# Testing
+unittest==1.1.0
+
+# Configuration
+configparser==5.3.0
