--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Core dependencies
-numpy==1.24.3
-pygame==2.4.0
+numpy
+pygame
 
 # Testing
-unittest==1.1.0
+unittest
 
 # Configuration
-configparser==5.3.0
+configparser
